<resources>
    <string name="app_name">Detailed Pokemon</string>
    <string name="lbl_loading">Loading…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="container_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="lbl_nav_home">Home</string>
    <string name="lbl_nav_favorites">Favorites</string>
    <string name="lbl_nav_settings">Settings</string>
    <string name="lbl_desc_picture">Pokemon picture</string>
    <string name="lbl_desc_pokemon_background">Pokemon Icon background</string>
    <string name="lbl_add_favorites">Add to favorites</string>
    <string name="lbl_btn_ok">OK</string>
    <string name="lbl_btn_order">Order:</string>
    <string name="lbl_btn_weight">Weight:</string>
    <string name="lbl_btn_height">Height:</string>
    <string name="lbl_btnbase_experience">Base Experience:</string>
    <string name="lbl_details">Details</string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_password">Password:</string>
    <string name="lbl_btn_login">Login</string>
    <string name="lbl_btn_sign_up">Sign Up</string>
    <string name="lbl_desc_api_logo">API logo</string>
    <string name="lbl_logout">Logout</string>
</resources>